--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     font-size: 45px;
   }
   
-  .repeat-letter-alert {
+  /* .repeat-letter-alert {
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px 10px 0 0;
     padding: 15px 20px;
@@ -39,38 +39,38 @@ body {
   
   .repeat-letter-alert p {
     margin: 0;
-  }
+  } */
   
-  .repeat-letter-alert.show {
+  /* .repeat-letter-alert.show {
     transform: translateY(-50px);
   }
-  
+   */
   .secret-word-container span {
     margin: 0 5px;
   }
   
-  .popup-container {
+  /* .popup-container {
     background-color: rgba(0, 0, 0, 0.849);
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    /* display: flex; */
+    display: flex;
     display: none;
     align-items: center;
     justify-content: center;
   }
-  
-  .popup {
+   */
+  /* .popup {
     background: #2980b9;
     border-radius: 5px;
     box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
     padding: 20px;
     text-align: center;
   }
-  
-  .popup button {
+   */
+  /* .popup button {
     cursor: pointer;
     background-color: #fff;
     border: 0;
@@ -78,4 +78,4 @@ body {
     padding: 12px 20px;
     font-size: 16px;
   }
-  
+   */
